syntax = "proto3";

import "google/protobuf/timestamp.proto";

package jobs;

option go_package = "github.com/BenjaminB64/fullstack-test/back/jobservice/protobuf/jobs-proto";

service JobService {
  rpc GetPendingJobs(GetPendingJobsRequest) returns (GetPendingJobsResponse) {}
  rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse) {}
}

message GetPendingJobsRequest {}

message GetPendingJobsResponse {
  repeated Job jobs = 1;
}

message Localisation {
  float latitude = 1;
  float longitude = 2;
}

message UpdateJobRequest {
  int32 id = 1;

  JobStatus status = 2;
  JobResult result = 3;
}

message UpdateJobResponse {}

message JobResult {
  oneof result_oneof {
    Weather weather = 1;
    BridgeSchedule bridge_schedule = 2;
  }
}

message Weather {
  float relativeHumidity = 1;
  int32 temperature = 2;
  int32 wmoCode = 3;
}

message BridgeSchedule {
  repeated BridgeClosure closures = 1;
}

message BridgeClosure {
  string boat_name = 3;
  google.protobuf.Timestamp close_time = 1;
  google.protobuf.Timestamp reopen_time = 2;
}

message Job {
  int32 id = 1;
  JobType type = 2;
  JobStatus status = 3;
  JobResult result = 4;
}

enum JobType {
  JOB_TYPE_UNKNOWN = 0;
  JOB_TYPE_GET_CHABAN_DELMAS_BRIDGE_SCHEDULE = 1;
  JOB_TYPE_GET_WEATHER = 2;
}

enum JobStatus {
  JOB_STATUS_UNKNOWN = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_IN_PROGRESS = 2;
  JOB_STATUS_COMPLETED = 3;
  JOB_STATUS_FAILED = 4;
}
