syntax = "proto3";

import "google/protobuf/timestamp.proto";

package jobs;

option go_package = "github.com/BenjaminB64/fullstack-test/back/jobservice/protobuf/jobs-proto";

service JobService {
  rpc GetJobToProcess(GetJobToProcessRequest) returns (GetJobToProcessResponse) {}
  rpc UpdateJobStatus(UpdateJobStatusRequest) returns (UpdateJobStatusResponse) {}
}

message GetJobToProcessRequest {}

message GetJobToProcessResponse {
  int32 id = 1;

  JobType type = 2;
  Localisation localisation = 3;
}

message Localisation {
  float latitude = 1;
  float longitude = 2;
}

message UpdateJobStatusRequest {
  int32 id = 1;
  JobStatus status = 2;
  JobResult result = 3;
}

message UpdateJobStatusResponse {}

message JobResult {
  Weather weather = 1;
  repeated BridgeStatus bridgeStatus = 2;
}

message Weather {
  float relativeHumidity = 1;
  int32 temperature = 2;
  int32 wmoCode = 3;
}

message BridgeStatus {
  google.protobuf.Timestamp closingTime = 1;
  google.protobuf.Timestamp openingTime = 2;
}

enum JobType {
  JOB_TYPE_UNKNOWN = 0;
  JOB_TYPE_GET_CHABAN_DELMAS_BRIDGE_STATUS = 1;
  JOB_TYPE_GET_WEATHER = 2;
}

enum JobStatus {
  JOB_STATUS_UNKNOWN = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_IN_PROGRESS = 2;
  JOB_STATUS_COMPLETED = 3;
  JOB_STATUS_FAILED = 4;
}
